--- a/app/src/main/res/layout/book_card.xml
+++ b/app/src/main/res/layout/book_card.xml
@@ -43,6 +43,7 @@
                 android:autoText="true"
                 android:text="The 1975"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/image_book" />
@@ -54,6 +55,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:text="Price: 24.95 $"
+                android:textColor="@android:color/holo_blue_dark"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_title" />
 
